samples/_failures_safe/1761130646_78cf45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57c1762c.c: In function ‘main’:
./samples/SAFE/__tmp_57c1762c.c:152:5: error: expected declaration or statement at end of input
  152 |     print_matrix(&mat2);
      |     ^~~~~~~~~~~~
